[tool.poetry]
name = "mrl-grid"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mrl_grid"}]

[tool.poetry.dependencies]
python = "^3.10"
gym = "^0.26.2"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
