[tool.poetry]
name = "mrl-grid"
version = "0.1.0"
description = ""
authors = ["Nickolai <you@example.com>"]
readme = "README.md"
packages = [{include = "mrl_grid"}]

[tool.poetry.dependencies]
python = "3.10.8"
gym = ">=0.21.0"
matplotlib = "^3.6.2"
tensorflow-macos = "^2.11.0"
tensorflow-metal = "^0.7.0"
pyvirtualdisplay = "^3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
